Refactored to use posted API data on the index template
refactored axios on '/' GET
refactored '/' POST to return JSON and to catch errors saving to the DB
added variables to handlebars template
added a .env file to prevent hard coding data that could change per enviroment
amended gitignore to clear unused files

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,11 @@
 <h1>User Data</h1>
-<p>{{name}}</p>
+
+{{#if err}}
+  {{ err }}
+{{/if}}
+
+<p>{{name}} - {{age}} - {{smoker}}</p>
+
+{{#each dependants}}
+  <li>{{this}}</li>
+{{/each}}
